--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 			<version>0.10.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka_2.10</artifactId>
+			<version>0.10.2.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 </project>
