--- a/pom.xml
+++ b/pom.xml
@@ -70,14 +70,14 @@
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-streams</artifactId>
-			<version>0.10.0.0</version>
+			<version>0.11.0.0</version>
 		</dependency>
 
-		<!-- KAFKA CLIENTS DEPENDENCY FOR PRODUCERS AND CONCUMERS -->
+		<!-- KAFKA CLIENTS DEPENDENCY FOR PRODUCERS AND CONSUMERS -->
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
-			<version>0.10.2.1</version>
+			<version>0.11.0.0</version>
 		</dependency>
 
 		<!-- JSON PROCESSING DEPENDENCIES -->
